@@ -9,11 +9,33 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+configurations {
+    extraLibs
+}
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    extraLibs group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.assertj:assertj-core:3.6.1'
+
+    configurations.implementation.extendsFrom(configurations.extraLibs)
+}
+
+//To enable java18 preview features
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    jvmArgs(['--enable-preview'])
+}
+
+jar {
+    from {
+        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 test {
